ADD - Adicionei o subtitulo do trabalho, explicando para que o mesmo serve.

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
     <h1>Tags Básicas</h1>
+    <h2>Este trabalho tem como objetivo ingressar o nosso conhecimento sobre sites html, explorando resumidamente as tags iniciais.</h2>
+   
 </body>
 </html>
