--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
     <h1>Tags Básicas</h1>
     <h2>Este trabalho tem como objetivo ingressar o nosso conhecimento sobre sites html, explorando resumidamente as tags iniciais.</h2>
-   
+    <p> <strong> Head: </strong> serve para armazenar metadados sobre o documento, esses que não são mostrados na página para o usuário. Ela inclui informações como o nome do site, tamanho da tela e tipo do teclado. </p>
+    <p> <strong> Body: </strong> é a parte do código onde o conteúdo da página é inserido, o corpo do documento. Nele, todo o conteúdo visível da página web será adicionado e mostrado para o usuário. </p>
+
 </body>
 </html>
