--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h2>Este trabalho tem como objetivo ingressar o nosso conhecimento sobre sites html, explorando resumidamente as tags iniciais.</h2>
     <p> <strong> Head: </strong> serve para armazenar metadados sobre o documento, esses que não são mostrados na página para o usuário. Ela inclui informações como o nome do site, tamanho da tela e tipo do teclado. </p>
     <p> <strong> Body: </strong> é a parte do código onde o conteúdo da página é inserido, o corpo do documento. Nele, todo o conteúdo visível da página web será adicionado e mostrado para o usuário. </p>
+    <p> <strong> H1 ao H6: </strong> são as tags que definem um tipo de hierarquia de títulos, sendo H1 o título principal, contendo o conteúdo do site, enquanto o H2 a H6 são os subtítulos que dividem as seções para melhor organização e clareza da página. Em importância, os titúlos mudam de forma decrescente. </p>
 
 </body>
 </html>
