ADD - Adicionei as tags de formatação adicionais, que servem para a estética visual dos textos, como o negrito e o itálico.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p> <strong> Head: </strong> serve para armazenar metadados sobre o documento, esses que não são mostrados na página para o usuário. Ela inclui informações como o nome do site, tamanho da tela e tipo do teclado. </p>
     <p> <strong> Body: </strong> é a parte do código onde o conteúdo da página é inserido, o corpo do documento. Nele, todo o conteúdo visível da página web será adicionado e mostrado para o usuário. </p>
     <p> <strong> H1 ao H6: </strong> são as tags que definem um tipo de hierarquia de títulos, sendo H1 o título principal, contendo o conteúdo do site, enquanto o H2 a H6 são os subtítulos que dividem as seções para melhor organização e clareza da página. Em importância, os titúlos mudam de forma decrescente. </p>
-
+    <p> <strong> Strong ou B: </strong> ele deixa seu texto em <strong>negrito</strong>. </p>   
+    <p> <strong> Em ou I: </strong> ele deixa seu texto em <i>itálico</i>. </p>   
 </body>
 </html>
