ADD - Foi colocado o comando br, que serve para estética do texto e espaçamento.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <p> <strong> Body: </strong> é a parte do código onde o conteúdo da página é inserido, o corpo do documento. Nele, todo o conteúdo visível da página web será adicionado e mostrado para o usuário. </p>
     <p> <strong> H1 ao H6: </strong> são as tags que definem um tipo de hierarquia de títulos, sendo H1 o título principal, contendo o conteúdo do site, enquanto o H2 a H6 são os subtítulos que dividem as seções para melhor organização e clareza da página. Em importância, os titúlos mudam de forma decrescente. </p>
     <p> <strong> Strong ou B: </strong> ele deixa seu texto em <strong>negrito</strong>. </p>   
-    <p> <strong> Em ou I: </strong> ele deixa seu texto em <i>itálico</i>. </p>   
+    <p> <strong> Em ou I: </strong> ele deixa seu texto em <i>itálico</i>. </p>
+    <p> <strong> U: </strong> ele deixa seu texto <i>sublinhado</i>. </p>
+    <p> <strong> Br: </strong> ele quebra a linha, o texto que estiver depois do br irá para a linha de baixo. Funcionando como o comando "Enter" do teclado. </p>
+    
 </body>
 </html>
