--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Tags Básicas</h1>
+    <hr>
     <h2>Este trabalho tem como objetivo ingressar o nosso conhecimento sobre sites html, explorando resumidamente as tags iniciais.</h2>
     <p> <strong> Head: </strong> serve para armazenar metadados sobre o documento, esses que não são mostrados na página para o usuário. Ela inclui informações como o nome do site, tamanho da tela e tipo do teclado. </p>
     <p> <strong> Body: </strong> é a parte do código onde o conteúdo da página é inserido, o corpo do documento. Nele, todo o conteúdo visível da página web será adicionado e mostrado para o usuário. </p>
@@ -14,6 +15,7 @@
     <p> <strong> Em ou I: </strong> ele deixa seu texto em <i>itálico</i>. </p>
     <p> <strong> U: </strong> ele deixa seu texto <i>sublinhado</i>. </p>
     <p> <strong> Br: </strong> ele quebra a linha, o texto que estiver depois do br irá para a linha de baixo. Funcionando como o comando "Enter" do teclado. </p>
-    
+    <p> <strong> Hr: </strong> ele cria uma linha horizontal, funcionando como um divisor de seções. </p>
+
 </body>
 </html>
