ADD - Dois novas tags foram adicionadas, e um meme fofo de cachorrinho para testar o comando para imagens.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <p> <strong> U: </strong> ele deixa seu texto <i>sublinhado</i>. </p>
     <p> <strong> Br: </strong> ele quebra a linha, o texto que estiver depois do br irá para a linha de baixo. Funcionando como o comando "Enter" do teclado. </p>
     <p> <strong> Hr: </strong> ele cria uma linha horizontal, funcionando como um divisor de seções. </p>
-
+    <p> <strong> A: </strong> é a tag que direciona o usuário para um link, utilizando o atributo "href" que define seu destino. </p>
+    <p> <strong> Img: </strong> é a tag que insere uma imagem na página, utilizando o atributo "src" para definir o caminho da imagem e "alt" para fornecer um texto alternativo caso a imagem não seja carregada. </p>  
+    <img src="cachorrinho-coquette.jpeg" alt="Cachorrinho Coquette">
 </body>
 </html>
