ADD - Por fim, utilizei do comando br para quebrar uma linha e colocar uma pequena finalização.

--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
     <p> <strong> A: </strong> é a tag que direciona o usuário para um link, utilizando o atributo "href" que define seu destino. </p>
     <p> <strong> Img: </strong> é a tag que insere uma imagem na página, utilizando o atributo "src" para definir o caminho da imagem e "alt" para fornecer um texto alternativo caso a imagem não seja carregada. </p>  
     <img src="cachorrinho-coquette.jpeg" alt="Cachorrinho Coquette">
+    <br>
+    <p>Com essa pesquisa começamos a entender como funciona o desenvolvimento de sites em html.</p>
 </body>
 </html>
